--- a/KalendarzKarierySolution/KalendarzKariery/Web.config
+++ b/KalendarzKarierySolution/KalendarzKariery/Web.config
@@ -17,28 +17,22 @@
 
 	<connectionStrings>
 		<!--localhost-->
-		<!--<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework" />-->
+		<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework" />
 
 		<!--azure-->
-		<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;App=EntityFramework" />
+		<!--<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;App=EntityFramework" />-->
 
 		<!-- KalendarzKarieryDBEntities musi byc taka sama jak w KalendarzKarieryData app.config -->
 		<!--localhost-->
-		<!--<add name="KalendarzKarieryDBEntities" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+		<add name="KalendarzKarieryDBEntities" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 		
 		<!--azure-->
-		<add name="KalendarzKarieryDBEntities" providerName="System.Data.EntityClient" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;MultipleActiveResultSets=True;Encrypt=True;Connection Timeout=30;&quot;" />
+		<!--<add name="KalendarzKarieryDBEntities" providerName="System.Data.EntityClient" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;MultipleActiveResultSets=True;Encrypt=True;Connection Timeout=30;&quot;" />-->
 
 	</connectionStrings>
 	<system.data>
 		<DbProviderFactories>
-			<add name="Effort.Provider"
-
-					 invariant="Effort.Provider"
-
-					 description="Effort.Provider"
-
-					 type="Effort.Provider.EffortProviderFactory, Effort" />
+			<add name="Effort.Provider" invariant="Effort.Provider" description="Effort.Provider" type="Effort.Provider.EffortProviderFactory, Effort" />
 
 		</DbProviderFactories>
 
@@ -51,7 +45,7 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
 	<system.web>
-		<customErrors mode="Off"/>
+		<customErrors mode="Off" />
 		<httpRuntime targetFramework="4.5" />
 		<compilation debug="true" targetFramework="4.5">
 			<assemblies>
