--- a/KalendarzKarierySolution/KalendarzKarieryData/3. KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryData/3. KalendarzKarieryData.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Models\ViewModels\DateModel.cs" />
     <Compile Include="Models\ViewModels\DateTimeModel.cs" />
     <Compile Include="Models\ViewModels\MainViewModel.cs" />
+    <Compile Include="Models\ViewModels\SignUpUserForEventModel.cs" />
     <Compile Include="Models\ViewModels\UpdateNoteViewModel.cs" />
     <Compile Include="Note.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
@@ -127,9 +128,6 @@
     <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\RepositoryProvider.cs" />
-    <Compile Include="sysdiagram.cs">
-      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
-    </Compile>
     <Compile Include="User.cs">
       <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
