--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -249,16 +249,6 @@
     <Content Include="Content\Fonts\SegoeUI\segoeuil.ttf" />
     <Content Include="Content\Fonts\SegoeUI\segoeuiz.ttf" />
     <Content Include="Content\Fonts\SegoeUI\seguisb.ttf" />
-    <Content Include="Data\FakeRepositoryCsvFiles\Address.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\Event.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\EventKind.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\EventStatus.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\PrivacyLevel.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\User.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\UserAccountInfo.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\webpages_Membership.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\webpages_Roles.csv" />
-    <Content Include="Data\FakeRepositoryCsvFiles\webpages_UsersInRoles.csv" />
     <Content Include="Content\Fonts\Raleway\Raleway-Black-Italic.ttf" />
     <Content Include="Content\Fonts\Raleway\Raleway-Black.ttf" />
     <Content Include="Content\Fonts\Raleway\Raleway-Bold-Italic.ttf" />
@@ -278,9 +268,9 @@
     <Content Include="Content\Fonts\Raleway\Raleway-Thin-Italic.ttf" />
     <Content Include="Content\Fonts\Raleway\Raleway-Thin.ttf" />
     <None Include="Properties\PublishProfiles\Alan.pubxml" />
-    <Content Include="Scripts\Helpers\EventManager.js" />
-    <Content Include="Scripts\Helpers\NoteManager.js" />
-    <Content Include="Scripts\Helpers\WebApiCaller.js" />
+    <Content Include="Scripts\JSManagers\EventManager.js" />
+    <Content Include="Scripts\JSManagers\NoteManager.js" />
+    <Content Include="Scripts\JSUtils\WebApiCaller.js" />
     <Content Include="Scripts\JSModels\KKEventDateModelObservable.js" />
     <Content Include="Scripts\JSModels\KKNoteModelObservable.js" />
     <Content Include="Scripts\JSModels\KKNoteModel.js" />
@@ -293,8 +283,8 @@
     <Content Include="Images\TestBackgrounds\tapetaBrx.png" />
     <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\spec\EventTreeBuilderSpec.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.js" />
-    <Content Include="Scripts\Helpers\TreeBuilder.js" />
-    <Content Include="Scripts\Helpers\EventColorHelper.js" />
+    <Content Include="Scripts\JSUtils\TreeBuilder.js" />
+    <Content Include="Scripts\JSUtils\EventColorHelper.js" />
     <Content Include="Scripts\JSModels\KKDateModel.js" />
     <Content Include="Scripts\JSModels\KKEventDateModel.js" />
     <Content Include="Scripts\JSModels\KKEventModel.js" />
@@ -310,7 +300,6 @@
     <Content Include="Scripts\Lib\jquery-2.0.3.min.js" />
     <Content Include="Scripts\Lib\jquery-2.0.3.min.map" />
     <Content Include="Images\kalendarzTlo.png" />
-    <Content Include="Images\Loader\ajax-loader.gif" />
     <Content Include="Images\point.png" />
     <Content Include="Scripts\JSViewModels\AppViewModel.js" />
     <Content Include="Scripts\CalendarWidget\calendarWidget.js" />
