--- a/KalendarzKarierySolution/KalendarzKariery/Web.config
+++ b/KalendarzKarierySolution/KalendarzKariery/Web.config
@@ -17,18 +17,20 @@
 
 	<connectionStrings>
 		<!--localhost-->
-		<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework" />
+		<!--<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="data source=localhost\SQLEXPRESS;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework" />-->
 
 		<!--azure-->
-		<!--<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;App=EntityFramework" />-->
+		<add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:kalendarzkarieryserver.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@kalendarzkarieryserver;Password=Polska123;Encrypt=True;MultipleActiveResultSets=true;TrustServerCertificate=False;Connection Timeout=30;" />
 
 		<!-- KalendarzKarieryDBEntities musi byc taka sama jak w KalendarzKarieryData app.config -->
 		<!--localhost-->
-		<add name="KalendarzKarieryDBEntities" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<!--<add name="KalendarzKarieryDBEntities" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 		
 		<!--azure-->
-		<!--<add name="KalendarzKarieryDBEntities" providerName="System.Data.EntityClient" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:wpjaritlp5.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@wpjaritlp5;Password=Polska123;Trusted_Connection=False;MultipleActiveResultSets=True;Encrypt=True;Connection Timeout=30;&quot;" />-->
+		<add name="KalendarzKarieryDBEntities" providerName="System.Data.EntityClient" connectionString="metadata=res://KalendarzKarieryData/KalendarzKarieryDBEntities.csdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.ssdl|res://KalendarzKarieryData/KalendarzKarieryDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:kalendarzkarieryserver.database.windows.net,1433;Database=KalendarzKarieryDB;User ID=alanik@kalendarzkarieryserver;Password=Polska123;Encrypt=True;TrustServerCertificate=False;MultipleActiveResultSets=true;Connection Timeout=30;&quot;" />
 
+    
+    
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="2.0.0.0" />
