--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -331,8 +331,8 @@
     <Content Include="Scripts\Lib\jquery-ui-1.8.20.js" />
     <Content Include="Scripts\Lib\jquery-ui-1.8.20.min.js" />
     <Content Include="Scripts\Lib\Masonry\masonry-docs.min.js" />
-    <Content Include="Scripts\Lib\raphael-min.js" />
     <Content Include="Scripts\Lib\HammerJS\hammer.min.js" />
+    <Content Include="Scripts\Lib\SpinJS\spin.js" />
     <Content Include="Scripts\Lib\SpinJS\spin.min.js" />
     <Content Include="Scripts\Lib\_references.js" />
     <Content Include="Scripts\Lib\modernizr-2.7.1.js" />
