--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -295,7 +295,6 @@
     <Content Include="Images\TestBackgrounds\kalendarzTlo4.png" />
     <Content Include="Images\TestBackgrounds\tapetaBrx.png" />
     <Content Include="Scripts\JSUnitTests\Jasmine-2.1.3\spec\SimpleFiltSpec.js" />
-    <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.js" />
     <Content Include="Scripts\JSUtils\TreeBuilder.js" />
     <Content Include="Scripts\JSUtils\EventColorHelper.js" />
     <Content Include="Scripts\JSModels\KKDateModel.js" />
@@ -316,9 +315,6 @@
     <Content Include="Images\point.png" />
     <Content Include="Scripts\JSViewModels\AppViewModel.js" />
     <Content Include="Scripts\CalendarWidget\calendarWidget.js" />
-    <Content Include="Scripts\CalendarWidget\Slider\jquery.animate-enhanced.min.js" />
-    <Content Include="Scripts\CalendarWidget\Slider\jquery.easing.1.3.js" />
-    <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.min.js" />
     <None Include="Scripts\Lib\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\Lib\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\Lib\jquery.unobtrusive-ajax.min.js" />
@@ -337,7 +333,7 @@
     <Content Include="Scripts\Lib\SpinJS\spin.min.js" />
     <Content Include="Scripts\Lib\_references.js" />
     <Content Include="Scripts\Lib\modernizr-2.7.1.js" />
-    <Content Include="Scripts\Program.js" />
+    <Content Include="Scripts\app.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
