--- a/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/1. KalendarzKariery.csproj
@@ -367,7 +367,7 @@
     <Content Include="Views\Home\DetailsPage\_DetailsSettings.cshtml" />
     <Content Include="Views\Home\DetailsPage\_DetailsUserProfile.cshtml" />
     <Content Include="Views\Shared\JSUnitTests.cshtml" />
-    <Content Include="Views\Home\LobbyPage\_LobbyLoginBar.cshtml" />
+    <Content Include="Views\Home\SharedPartials\_LoginBar.cshtml" />
     <Content Include="Views\Home\LobbyPage\_LobbyEventsMenuItems.cshtml" />
     <Content Include="Views\Shared\_LayoutMobile.cshtml" />
     <Content Include="Views\Home\DetailsPage\_DetailsEventBlock.cshtml" />
